--- a/API/environment.yml
+++ b/API/environment.yml
@@ -1,243 +1,224 @@
-name: 
-  /media/seagate4tb/Seagate_4tb/Documentos/Github_clone/ML-personal/TC3007C.501_EQ6/.conda
+name: basics
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - alsa-lib=1.2.10
-  - aom=3.6.1
-  - attr=2.5.1
-  - blas=1.0
-  - bzip2=1.0.8
-  - c-ares=1.20.1
-  - ca-certificates=2023.7.22
-  - cairo=1.18.0
-  - click=8.1.7
-  - dav1d=1.2.1
-  - dbus=1.13.6
-  - dlib=19.24.2
-  - eigen=3.4.0
-  - expat=2.5.0
-  - face-recognition=1.3.0
-  - face_recognition_models=0.3.0
-  - ffmpeg=6.0.0
-  - font-ttf-dejavu-sans-mono=2.37
-  - font-ttf-inconsolata=3.000
-  - font-ttf-source-code-pro=2.038
-  - font-ttf-ubuntu=0.83
-  - fontconfig=2.14.2
-  - fonts-conda-ecosystem=1
-  - fonts-conda-forge=1
-  - freeglut=3.2.2
-  - freetds=1.4.6
-  - freetype=2.12.1
-  - fribidi=1.0.10
-  - gettext=0.21.1
-  - glib=2.78.0
-  - glib-tools=2.78.0
-  - gmp=6.2.1
-  - gnutls=3.7.8
-  - graphite2=1.3.13
-  - gst-plugins-base=1.22.6
-  - gstreamer=1.22.6
-  - harfbuzz=8.2.1
-  - hdf5=1.14.2
-  - icu=73.2
-  - intel-openmp=2023.1.0
-  - jasper=4.0.0
-  - keyutils=1.6.1
-  - krb5=1.21.2
-  - lame=3.100
-  - lcms2=2.15
-  - ld_impl_linux-64=2.38
-  - lerc=4.0.0
-  - libabseil=20230802.1
-  - libaec=1.1.2
-  - libass=0.17.1
-  - libblas=3.9.0
-  - libcap=2.69
-  - libcblas=3.9.0
-  - libclang=15.0.7
-  - libclang13=15.0.7
-  - libcups=2.3.3
-  - libcurl=8.4.0
-  - libdeflate=1.19
-  - libdrm=2.4.114
-  - libedit=3.1.20191231
-  - libev=4.33
-  - libevent=2.1.12
-  - libexpat=2.5.0
-  - libffi=3.4.4
-  - libflac=1.4.3
-  - libgcc-ng=13.2.0
-  - libgcrypt=1.10.1
-  - libgfortran-ng=13.2.0
-  - libgfortran5=13.2.0
-  - libglib=2.78.0
-  - libglu=9.0.0
-  - libgpg-error=1.47
-  - libiconv=1.17
-  - libidn2=2.3.4
-  - libjpeg-turbo=2.1.5.1
-  - liblapack=3.9.0
-  - liblapacke=3.9.0
-  - libllvm15=15.0.7
-  - libnghttp2=1.55.1
-  - libnsl=2.0.1
-  - libogg=1.3.4
-  - libopencv=4.8.1
-  - libopenvino=2023.1.0
-  - libopenvino-auto-batch-plugin=2023.1.0
-  - libopenvino-auto-plugin=2023.1.0
-  - libopenvino-hetero-plugin=2023.1.0
-  - libopenvino-intel-cpu-plugin=2023.1.0
-  - libopenvino-intel-gpu-plugin=2023.1.0
-  - libopenvino-ir-frontend=2023.1.0
-  - libopenvino-onnx-frontend=2023.1.0
-  - libopenvino-paddle-frontend=2023.1.0
-  - libopenvino-pytorch-frontend=2023.1.0
-  - libopenvino-tensorflow-frontend=2023.1.0
-  - libopenvino-tensorflow-lite-frontend=2023.1.0
-  - libopus=1.3.1
-  - libpciaccess=0.17
-  - libpng=1.6.39
-  - libpq=15.4
-  - libprotobuf=4.24.3
-  - libsndfile=1.2.2
-  - libsqlite=3.44.0
-  - libssh2=1.11.0
-  - libstdcxx-ng=13.2.0
-  - libsystemd0=254
-  - libtasn1=4.19.0
-  - libtiff=4.6.0
-  - libunistring=0.9.10
-  - libuuid=2.38.1
-  - libva=2.20.0
-  - libvorbis=1.3.7
-  - libvpx=1.13.1
-  - libwebp-base=1.3.2
-  - libxcb=1.15
-  - libxkbcommon=1.6.0
-  - libxml2=2.11.5
-  - libzlib=1.2.13
-  - llvm-openmp=17.0.4
-  - lz4-c=1.9.4
-  - mkl=2023.1.0
-  - mkl-service=2.4.0
-  - mkl_fft=1.3.8
-  - mkl_random=1.2.4
-  - mpg123=1.32.3
-  - mysql-common=8.0.33
-  - mysql-libs=8.0.33
-  - ncurses=6.4
-  - nettle=3.8.1
-  - nspr=4.35
-  - nss=3.94
-  - numpy=1.26.0
-  - numpy-base=1.26.0
-  - ocl-icd=2.3.1
-  - ocl-icd-system=1.0.0
-  - openh264=2.3.1
-  - openjpeg=2.5.0
-  - openssl=3.1.4
-  - p11-kit=0.24.1
-  - pcre2=10.40
-  - pillow=10.0.1
-  - pip=23.3
-  - pixman=0.42.2
-  - pthread-stubs=0.4
-  - pugixml=1.14
-  - pulseaudio-client=16.1
-  - pymssql=2.2.10
-  - python=3.11.5
-  - python_abi=3.11
-  - qt-main=5.15.8
-  - readline=8.2
-  - scipy=1.11.3
-  - setuptools=68.0.0
-  - snappy=1.1.10
-  - sqlite=3.41.2
-  - svt-av1=1.7.0
-  - tbb=2021.8.0
-  - tk=8.6.12
-  - tzdata=2023c
-  - unixodbc=2.3.12
-  - wheel=0.41.2
-  - x264=1!164.3095
-  - x265=3.5
-  - xcb-util=0.4.0
-  - xcb-util-image=0.4.0
-  - xcb-util-keysyms=0.4.0
-  - xcb-util-renderutil=0.3.9
-  - xcb-util-wm=0.4.1
-  - xkeyboard-config=2.40
-  - xorg-fixesproto=5.0
-  - xorg-inputproto=2.3.2
-  - xorg-kbproto=1.0.7
-  - xorg-libice=1.1.1
-  - xorg-libsm=1.2.4
-  - xorg-libx11=1.8.7
-  - xorg-libxau=1.0.11
-  - xorg-libxdmcp=1.1.3
-  - xorg-libxext=1.3.4
-  - xorg-libxfixes=5.0.3
-  - xorg-libxi=1.7.10
-  - xorg-libxrender=0.9.11
-  - xorg-renderproto=0.11.1
-  - xorg-xextproto=7.3.0
-  - xorg-xf86vidmodeproto=2.3.1
-  - xorg-xproto=7.0.31
-  - xz=5.4.2
-  - zlib=1.2.13
-  - zstd=1.5.5
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - _sysroot_linux-64_curr_repodata_hack=3=h69a702a_14
+  - alsa-lib=1.2.11=hd590300_1
+  - binutils=2.40=hdd6e379_0
+  - binutils_impl_linux-64=2.40=hf600244_0
+  - binutils_linux-64=2.40=hdade7a5_3
+  - bzip2=1.0.8=hd590300_5
+  - c-compiler=1.7.0=hd590300_0
+  - ca-certificates=2024.2.2=hbcca054_0
+  - cccl=2.3.1=h6103f9b_0
+  - cuda=12.4.1=ha804496_0
+  - cuda-cccl=12.4.127=ha770c72_1
+  - cuda-cccl_linux-64=12.4.127=ha770c72_1
+  - cuda-command-line-tools=12.4.1=ha770c72_0
+  - cuda-compiler=12.4.1=hbad6d8a_0
+  - cuda-crt-dev_linux-64=12.4.131=ha770c72_0
+  - cuda-crt-tools=12.4.131=ha770c72_0
+  - cuda-cudart=12.4.127=hd3aeb46_0
+  - cuda-cudart-dev=12.4.127=hd3aeb46_0
+  - cuda-cudart-dev_linux-64=12.4.127=h59595ed_0
+  - cuda-cudart-static=12.4.127=hd3aeb46_0
+  - cuda-cudart-static_linux-64=12.4.127=h59595ed_0
+  - cuda-cudart_linux-64=12.4.127=h59595ed_0
+  - cuda-cuobjdump=12.4.127=h59595ed_1
+  - cuda-cupti=12.4.127=h59595ed_1
+  - cuda-cupti-dev=12.4.127=h59595ed_1
+  - cuda-cuxxfilt=12.4.127=h59595ed_1
+  - cuda-driver-dev=12.4.127=hd3aeb46_0
+  - cuda-driver-dev_linux-64=12.4.127=h59595ed_0
+  - cuda-gdb=12.4.127=hd47b8d6_1
+  - cuda-libraries=12.4.1=ha770c72_0
+  - cuda-libraries-dev=12.4.1=ha770c72_0
+  - cuda-nsight=12.4.127=ha770c72_1
+  - cuda-nvcc=12.4.131=hcdd1206_0
+  - cuda-nvcc-dev_linux-64=12.4.131=ha770c72_0
+  - cuda-nvcc-impl=12.4.131=hd3aeb46_0
+  - cuda-nvcc-tools=12.4.131=hd3aeb46_0
+  - cuda-nvcc_linux-64=12.4.131=h8a487aa_0
+  - cuda-nvdisasm=12.4.127=h59595ed_1
+  - cuda-nvml-dev=12.4.127=h59595ed_1
+  - cuda-nvprof=12.4.127=h59595ed_1
+  - cuda-nvprune=12.4.127=h59595ed_1
+  - cuda-nvrtc=12.4.127=hd3aeb46_1
+  - cuda-nvrtc-dev=12.4.127=hd3aeb46_1
+  - cuda-nvtx=12.4.127=h59595ed_1
+  - cuda-nvvm-dev_linux-64=12.4.131=ha770c72_0
+  - cuda-nvvm-impl=12.4.131=h59595ed_0
+  - cuda-nvvm-tools=12.4.131=h59595ed_0
+  - cuda-nvvp=12.4.127=h59595ed_1
+  - cuda-opencl=12.4.127=h59595ed_0
+  - cuda-opencl-dev=12.4.127=h59595ed_0
+  - cuda-profiler-api=12.4.127=ha770c72_1
+  - cuda-runtime=12.4.1=ha804496_0
+  - cuda-sanitizer-api=12.4.127=hd3aeb46_0
+  - cuda-toolkit=12.4.1=ha804496_0
+  - cuda-tools=12.4.1=ha770c72_0
+  - cuda-version=12.4=h3060b56_3
+  - cuda-visual-tools=12.4.1=ha770c72_0
+  - cxx-compiler=1.7.0=h00ab1b0_0
+  - dbus=1.13.6=h5008d03_3
+  - expat=2.6.2=h59595ed_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_1
+  - fontconfig=2.14.2=h14ed4e7_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - freetype=2.12.1=h267a509_2
+  - gcc=12.3.0=h95e488c_3
+  - gcc_impl_linux-64=12.3.0=he2b93b0_5
+  - gcc_linux-64=12.3.0=h6477408_3
+  - gds-tools=1.9.1.3=hd3aeb46_0
+  - gmp=6.3.0=h59595ed_1
+  - gxx=12.3.0=h95e488c_3
+  - gxx_impl_linux-64=12.3.0=he2b93b0_5
+  - gxx_linux-64=12.3.0=h4a1b8e8_3
+  - icu=73.2=h59595ed_0
+  - kernel-headers_linux-64=3.10.0=h4a8ded7_14
+  - keyutils=1.6.1=h166bdaf_0
+  - krb5=1.21.2=h659d440_0
+  - ld_impl_linux-64=2.40=h41732ed_0
+  - libcublas=12.4.5.8=hd3aeb46_1
+  - libcublas-dev=12.4.5.8=hd3aeb46_1
+  - libcufft=11.2.1.3=hd3aeb46_1
+  - libcufft-dev=11.2.1.3=hd3aeb46_1
+  - libcufile=1.9.1.3=hd3aeb46_0
+  - libcufile-dev=1.9.1.3=hd3aeb46_0
+  - libcurand=10.3.5.147=hd3aeb46_1
+  - libcurand-dev=10.3.5.147=hd3aeb46_1
+  - libcusolver=11.6.1.9=hd3aeb46_1
+  - libcusolver-dev=11.6.1.9=hd3aeb46_1
+  - libcusparse=12.3.1.170=hd3aeb46_1
+  - libcusparse-dev=12.3.1.170=hd3aeb46_1
+  - libedit=3.1.20191231=he28a2e2_2
+  - libexpat=2.6.2=h59595ed_0
+  - libffi=3.4.2=h7f98852_5
+  - libgcc-devel_linux-64=12.3.0=h8bca6fd_105
+  - libgcc-ng=13.2.0=h807b86a_5
+  - libglib=2.80.0=hf2295e7_5
+  - libgomp=13.2.0=h807b86a_5
+  - libiconv=1.17=hd590300_2
+  - libnpp=12.2.5.30=hd3aeb46_1
+  - libnpp-dev=12.2.5.30=hd3aeb46_1
+  - libnsl=2.0.1=hd590300_0
+  - libnuma=2.0.18=hd590300_0
+  - libnvfatbin=12.4.127=hd3aeb46_1
+  - libnvfatbin-dev=12.4.127=hd3aeb46_1
+  - libnvjitlink=12.4.127=hd3aeb46_1
+  - libnvjitlink-dev=12.4.127=hd3aeb46_1
+  - libnvjpeg=12.3.1.117=h59595ed_1
+  - libnvjpeg-dev=12.3.1.117=ha770c72_1
+  - libpng=1.6.43=h2797004_0
+  - libsanitizer=12.3.0=h0f45ef3_5
+  - libsqlite=3.45.2=h2797004_0
+  - libstdcxx-devel_linux-64=12.3.0=h8bca6fd_105
+  - libstdcxx-ng=13.2.0=h7e041cc_5
+  - libuuid=2.38.1=h0b41bf4_0
+  - libxcb=1.15=h0b41bf4_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libxkbcommon=1.7.0=h662e7e4_0
+  - libxkbfile=1.1.0=h166bdaf_1
+  - libxml2=2.12.6=h232c23b_1
+  - libzlib=1.2.13=hd590300_5
+  - ncurses=6.4.20240210=h59595ed_0
+  - nsight-compute=2024.1.1.4=h00cb8e3_2
+  - nspr=4.35=h27087fc_0
+  - nss=3.98=h1d7d5a4_0
+  - ocl-icd=2.3.2=hd590300_1
+  - openssl=3.2.1=hd590300_1
+  - pcre2=10.43=hcad00b1_0
+  - pip=24.0=pyhd8ed1ab_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - python=3.11.8=hab00c5b_0_cpython
+  - readline=8.2=h8228510_1
+  - setuptools=69.5.1=pyhd8ed1ab_0
+  - sysroot_linux-64=2.17=h4a8ded7_14
+  - tk=8.6.13=noxft_h4845f30_101
+  - tzdata=2024a=h0c530f3_0
+  - wayland=1.22.0=h8c25dac_1
+  - wheel=0.43.0=pyhd8ed1ab_1
+  - xcb-util=0.4.0=hd590300_1
+  - xcb-util-cursor=0.1.4=hd590300_1
+  - xcb-util-image=0.4.0=h8ee46fc_1
+  - xcb-util-keysyms=0.4.0=h8ee46fc_1
+  - xcb-util-renderutil=0.3.9=hd590300_1
+  - xcb-util-wm=0.4.1=h8ee46fc_1
+  - xkeyboard-config=2.41=hd590300_0
+  - xorg-compositeproto=0.4.2=h7f98852_1001
+  - xorg-damageproto=1.2.1=h7f98852_1002
+  - xorg-fixesproto=5.0=h7f98852_1002
+  - xorg-inputproto=2.3.2=h7f98852_1002
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.1.1=hd590300_0
+  - xorg-libsm=1.2.4=h7391055_0
+  - xorg-libx11=1.8.9=h8ee46fc_0
+  - xorg-libxau=1.0.11=hd590300_0
+  - xorg-libxcomposite=0.4.6=h0b41bf4_1
+  - xorg-libxdamage=1.1.5=h7f98852_1
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h0b41bf4_2
+  - xorg-libxfixes=5.0.3=h7f98852_1004
+  - xorg-libxi=1.7.10=h7f98852_0
+  - xorg-libxrandr=1.5.2=h7f98852_1
+  - xorg-libxrender=0.9.11=hd590300_0
+  - xorg-libxtst=1.2.3=h7f98852_1002
+  - xorg-randrproto=1.5.0=h7f98852_1001
+  - xorg-recordproto=1.14.2=h7f98852_1002
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-util-macros=1.19.3=h7f98852_0
+  - xorg-xextproto=7.3.0=h0b41bf4_1003
+  - xorg-xproto=7.0.31=h7f98852_1007
+  - xz=5.2.6=h166bdaf_0
   - pip:
-      - absl-py==2.0.0
-      - attrs==23.1.0
-      - azure-core==1.29.5
-      - azure-identity==1.15.0
-      - azure-storage-blob==12.19.0
+      - absl-py==2.1.0
+      - astunparse==1.6.3
       - blinker==1.7.0
-      - certifi==2023.7.22
-      - cffi==1.16.0
+      - certifi==2024.2.2
       - charset-normalizer==3.3.2
-      - contourpy==1.1.1
-      - cryptography==41.0.5
-      - cycler==0.12.1
-      - flask==3.0.0
+      - click==8.1.7
+      - flask==3.0.3
       - flask-cors==4.0.0
-      - flask-jwt-extended==4.5.3
-      - flatbuffers==23.5.26
-      - fonttools==4.43.1
-      - greenlet==3.0.1
-      - idna==3.4
-      - isodate==0.6.1
-      - itsdangerous==2.1.2
-      - jinja2==3.1.2
-      - kiwisolver==1.4.5
-      - markupsafe==2.1.3
-      - matplotlib==3.8.1
-      - mediapipe==0.10.7
-      - msal==1.25.0
-      - msal-extensions==1.0.0
-      - opencv-contrib-python==4.8.1.78
-      - packaging==23.2
-      - platformdirs==3.11.0
-      - portalocker==2.8.2
-      - protobuf==3.20.3
-      - pycparser==2.21
-      - pyjwt==2.8.0
-      - pyopencl==2023.1.4
-      - pyparsing==3.1.1
-      - python-dateutil==2.8.2
-      - python-dotenv==1.0.0
-      - pytools==2023.1.1
+      - flatbuffers==24.3.25
+      - gast==0.5.4
+      - google-pasta==0.2.0
+      - grpcio==1.62.1
+      - h5py==3.11.0
+      - idna==3.7
+      - itsdangerous==2.2.0
+      - jinja2==3.1.3
+      - keras==3.2.1
+      - libclang==18.1.1
+      - markdown==3.6
+      - markdown-it-py==3.0.0
+      - markupsafe==2.1.5
+      - mdurl==0.1.2
+      - ml-dtypes==0.3.2
+      - namex==0.0.8
+      - numpy==1.26.4
+      - opencv-python==4.9.0.80
+      - opt-einsum==3.3.0
+      - optree==0.11.0
+      - packaging==24.0
+      - protobuf==4.25.3
+      - pygments==2.17.2
+      - pymssql==2.3.0
       - requests==2.31.0
+      - rich==13.7.1
       - six==1.16.0
-      - sounddevice==0.4.6
-      - typing-extensions==4.8.0
-      - urllib3==2.0.7
-      - werkzeug==3.0.1
-prefix: 
-  /media/seagate4tb/Seagate_4tb/Documentos/Github_clone/ML-personal/TC3007C.501_EQ6/.conda
+      - tensorboard==2.16.2
+      - tensorboard-data-server==0.7.2
+      - tensorflow==2.16.1
+      - tensorflow-io-gcs-filesystem==0.36.0
+      - termcolor==2.4.0
+      - typing-extensions==4.11.0
+      - urllib3==2.2.1
+      - werkzeug==3.0.2
+      - wrapt==1.16.0
