--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,13 @@ __pycache__/
 *.py[cod]
 *$py.class
 *.bat
+.streamlit/
 
+certificate.crt
+privatekey.key
 # C extensions
 *.so
+Classification_Model.p
 
 # Distribution / packaging
 .Python
